--- a/documents/Topología_I/Tema_3.tex
+++ b/documents/Topología_I/Tema_3.tex
@@ -342,7 +342,7 @@ Una primera intuición nos puede decir que un conjunto es conexo si todos sus pu
 \end{ejemplo}
 
 \begin{teo}
-    Sea $f:(X, \cc{T})\to (Y, \cc{T}')$ una aplicación continua, $x\in X$ y sea $\cc{C}(x)$ la c.c. de $X$ que continene a $x$ y $\cc{C}'(f(x))$ a la c.c. de $Y$ que contiene a $f(x)$. Entonces $f(\cc{C}(x))\subset \cc{C}'(f(x))$. 
+    Sea $f:(X, \cc{T})\to (Y, \cc{T}')$ una aplicación continua, $x\in X$ y sea $\cc{C}(x)$ la c.c. de $X$ que contiene a $x$ y $\cc{C}'(f(x))$ a la c.c. de $Y$ que contiene a $f(x)$. Entonces $f(\cc{C}(x))\subset \cc{C}'(f(x))$. 
     
     Si además $f$ es un homeomorfismo, entonces $f$ define una biyección entre las c.c. de $(X, \cc{T})$ y $(Y, \cc{T}')$ y $f|_{\cc{C}(x)}:(\cc{C}(x), \cc{T}|_{\cc{C}(x)})\to (\cc{C}'(f(x)), \cc{T}'|_{\cc{C}'(f(x))})$ es un homeomorfismo.
 
