--- a/documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/Temas/Tema_1.tex
+++ b/documents/Tercero/Segundo Cuatrimestre/Variable_Compleja_I/Temas/Tema_1.tex
@@ -1,1 +1,20 @@
-\chapter{Tema 1}
+\chapter{Tema 1: Números Complejos}
+
+Existen ecuaciones lineales que no cuentan con solución real, como por ejemplo la conocida $x^2+1=0$. La idea es extender el conjunto de los números reales para resolver todas las ecuaciones polinómicas. Esto fundamenta el Teorema Fundamental del Álgebra (toda ecuación lineal de grado mayor que 0 tiene al menos una raíz).
+
+\section{El cuerpo $\bb{C}$}
+
+Si definimos 
+\begin{align*}
+    \bb{R}^2= \{(x,y): x,y \in \bb{R}\}
+\end{align*}
+podemos considerar las siguientes operaciones, para definir un cuerpo:
+\begin{itemize}
+    \item Suma: $(x,y) + (u,v) = (x+u, y+v)\ \ \forall x,y,u,v\in \bb{R}$.
+    \item Producto: $(x,y)(u,v) = (xu - yv, xv + yu) \ \ \forall x,y,u,v \in \bb{R}$
+\end{itemize}
+
+Con estas operaciones definidas tenemos que $\bb{R}^2$ con la suma es ub grupo abeliano. El producto es asociativo, conmutativo y distributivo respecto a la suma. 
+Además tenemos elementos neutros para la suma y el producto.
+
+Con esto tenemos un cuerpo conmutativo $\bb{C}$. Como conjuntos tenemos que $\bb{C}=\bb{R}^2$.
