--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Temas/Tema_1.tex
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Temas/Tema_1.tex
@@ -1,2 +1,18 @@
-\chapter{Tema 1}
+\chapter{Tema 1: Resolución numérica de ecuaciones y sistemas no lineales}
 
+\section{Introducción}
+
+Resolver una ecuación es encontrar una expresión explícita de la solución en términos de operaciones elementales. Sabemos resolver ecuaciones polinómicas y además, que hasta grado 5 siempre podemos encontrar una solución de este tipo (esto lo demostró Galois). Hay ecuaciones como $xe^x=0$ de las que no se puede encontrar una solución explícita. Es por esto que conviene dar una solución aproximada a este tipo de ecuaciones, de las que no podemos calcular una solución explícita.\\
+
+En general, resolver una ecuación $f(x)=0$ con $f:\Omega \subseteq \bb{R} \to \bb{R}$ es encontrar una solución $s$ que sea cero o raíz de la función $f(x)$.\\
+
+El objetivo será construir una sucesión $x_0, x_1,\dots,x_n,\dots$ de aproximaciones tales que 
+\begin{align*}
+    \lim\limits_{n\to \infty} f(x_n) = 0
+\end{align*}
+
+\section{Métodos elementales: bisección}
+
+\section{Métodos de Newton-Raphson y secante}
+
+\subsection{Comportamiento del Método de Newton-Raphson}
